--- a/Aerostream Radar.html
+++ b/Aerostream Radar.html
@@ -21,8 +21,26 @@
 
         }
 
+        /* Grayscale filter for map */
         .leaflet-tile-pane {
             filter: grayscale(100%) contrast(1.2);
+
+        }
+
+        /* Loading screen */
+        #loading {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, 0.9);
+            color: #6ea3ee;
+            padding: 30px;
+            border-radius: 5px;
+            border: 1px solid #6ea3ee;
+            z-index: 2000;
+            text-align: center;
+            font-size: 16px;
 
         }
 
@@ -33,26 +51,118 @@
     <!-- Map container -->
     <div id = "map"></div>
 
+    <!-- Loading screen -->
+    <div id = "loading">
+        <div style = "font-family: 'Courier New';">Getting your location...</div>
+        <div style = "font-size: 12px; margin-top: 10px; opacity: 0.8; font-family: 'Courier New';">
+            Please allow location access to auto-center the map.
+        </div>
+    </div>
+
     <!-- Leaflet JavaScript -->
     <script src = "https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
     <script>
-        // Initialize map
-        var map = L.map('map', {
-            center: [49.1934, -123.1751],
-            zoom: 10,
-            attributionControl: false,
-            zoomControl: false
+        let map;
+        let userLatitude, userLongitude;
 
-        });
+        // Start getting location on page load
+        window.onload = function() {
+            requestLocation();
 
-        // OpenStreetMap layer
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19
+        };
 
-        })
-        .addTo(map);
+        function requestLocation() {
+            // Show loading screen
+            document.getElementById('loading').style.display = 'block';
+            //document.getElementById('coordinate-prompt').style.display = 'none';
 
+            // Check if location is supported by browser
+            if (!navigator.geolocation) {
+                console.log('Location not supported');
+                return;
+
+            }
+
+            // Request user location
+            navigator.geolocation.getCurrentPosition(
+                // Success
+                function(position) {
+                    console.log('Location found:', position.coords.latitude, position.coords.longitude);
+                    
+                    userLatitude = position.coords.latitude;
+                    userLongitude = position.coords.longitude;
+
+                    document.getElementById('loading').style.display = 'none';
+
+                    initializeMap();
+
+                },
+
+                // Error
+                function(error) {
+                    let errorMessage;
+
+                    switch(error.code) {
+                        case error.PERMISSION_DENIED:
+                            errorMessage = 'Location permission denied';
+
+                            break;
+
+                        case error.POSITION_UNAVAILABLE:
+                            errorMessage = 'Location information unavailable';
+
+                            break;
+
+                        case error.TIMEOUT:
+                            errorMessage = 'Location request timed out';
+
+                            break;
+
+                        case error.UNKNOWN_ERROR:
+                        default:
+                            errorMessage = 'Unknown error';
+
+                            break;
+
+                    }
+
+                    console.log('Error getting location:', errorMessage);
+
+                },
+
+                // Options
+                {
+                    enableHighAccuracy: true,
+                    timeout: 10000, // 10 seconds
+                    maximumAge: 300000 // Refresh every 5 minutes
+
+                }
+            );
+        }
+
+        function initializeMap() {
+            console.log('Loading map at:', userLatitude, userLongitude);
+
+            // Create a map centered on user location
+            map = L.map('map', {
+                center: [userLatitude, userLongitude],
+                zoom: 10,
+                attributionControl: false,
+                zoomControl: false
+
+            });
+            
+            // OpenStreetMap layer
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                maxZoom: 19
+
+            })
+            .addTo(map);
+
+            console.log('Map created successfully');
+
+        }
     </script>
 </body>
 </html>
