ui: update controls font and hover colours

--- a/Aerostream Radar.html
+++ b/Aerostream Radar.html
@@ -252,6 +252,7 @@
             white-space: nowrap;
             flex: 1;
             min-width: 80px;
+            font-family: 'Courier New';
 
         }
         .light-mode #controls-display button {
@@ -263,7 +264,7 @@
 
         /* Button hover effect */
         #controls-display button:hover {
-            background: var(--dark-button-hover);
+            background: var(--dark-tertiary);
             color: var(--dark-accent);
 
         }
