feat: smart selection panel with cross call memory

--- a/Aerostream Radar.html
+++ b/Aerostream Radar.html
@@ -76,6 +76,21 @@
 
     </div>
 
+    <!-- Aircraft info panel -->
+    <div id = "aircraft-info-panel">
+        <div class = "panel-header">
+            <h3 style = "margin: 0;">Aircraft Details</h3>
+            <button class = "close-button" onclick = "closeAircraftPanel()">✕</button>
+
+        </div>
+
+        <div id = "aircraft-info">
+            <span>Callsign:</span>
+            <span id = "info-callsign">-</span>
+
+        </div>
+    </div>
+
     <!-- Leaflet JavaScript -->
     <script src = "https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     
