feat: basic info panel stats

--- a/Aerostream Radar.html
+++ b/Aerostream Radar.html
@@ -85,8 +85,59 @@
         </div>
 
         <div id = "aircraft-info">
-            <span>Callsign:</span>
-            <span id = "info-callsign">-</span>
+            <div class = "info-row">
+                <span class = "info-label">Callsign:</span>
+                <span class = "info-value" id = "info-callsign">-</span>
+
+            </div>
+
+            <div class = "info-row">
+                <span class = "info-label">ICAO ID:</span>
+                <span class = "info-value" id = "info-icaoID">-</span>
+
+            </div>
+
+            <div class = "info-row">
+                <span class = "info-label">Altitude:</span>
+                <span class = "info-value" id = "info-altitude">-</span>
+
+            </div>
+
+            <div class = "info-row">
+                <span class = "info-label">Speed:</span>
+                <span class = "info-value" id = "info-speed">-</span>
+
+            </div>
+
+            <div class = "info-row">
+                <span class = "info-label">Track:</span>
+                <span class = "info-value" id = "info-track">-</span>
+
+            </div>
+
+            <div class = "info-row">
+                <span class = "info-label">Squawk:</span>
+                <span class = "info-value" id = "info-squawk">-</span>
+
+            </div>
+
+            <div class = "info-row">
+                <span class = "info-label">Type:</span>
+                <span class = "info-value" id = "info-type">-</span>
+
+            </div>
+
+            <div class = "info-row">
+                <span class = "info-label">Position:</span>
+                <span class = "info-value" id = "info-position">-</span>
+
+            </div>
+
+            <div class = "info-row">
+                <span class = "info-label">Last Updated:</span>
+                <span class = "info-value" id = "info-latestUpdate">-</span>
+
+            </div>
 
         </div>
     </div>
