feat: update attribution links and text

--- a/Aerostream Radar.html
+++ b/Aerostream Radar.html
@@ -49,12 +49,12 @@
         </div>
 
         <div style="margin-bottom: 6px;">
-            <u><a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a></u> - Standard maps
+            <u><a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a></u> - Standard map
         
         </div>
 
         <div style="margin-bottom: 6px;">
-            <u><a href="https://carto.com/" target="_blank">CARTO</a></u> - Labelless maps
+            <u><a href="https://carto.com/basemaps" target="_blank">CARTO Basemaps</a></u> - Alternate map
         
         </div>
 
