--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -17,7 +17,7 @@
 </head>
 
 <!-- HTML Structure -->
-<body class = "dark-mode" >
+<body class = "light-mode" >
     <!-- Map container -->
     <div id = "map"></div>
 
