feat: session timeout after 60 min

--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -18,6 +18,19 @@
 
 <!-- HTML Structure -->
 <body class = "light-mode" >
+    <!-- Timeout dialog -->
+    <div id = "timeout-dialog">
+        <div>Your session has timed out!</div>
+
+        <div style = "font-size: 12px; margin-top: 10px; opacity: 0.8;">
+            Please refresh to start a new session after 60 minutes of inactivity.
+
+        </div>
+
+    </div>
+
+    <div id="fullscreen-cover"></div>
+
     <!-- Map container -->
     <div id = "map"></div>
 
