fix: deselect aircraft properly

--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -118,7 +118,7 @@
     <div id = "aircraft-info-panel">
         <div class = "panel-header">
             <h3 style = "margin: 0;">Aircraft Details</h3>
-            <button class = "close-button" onclick = "closeAircraftPanel()">✕</button>
+            <button class = "close-button" onclick = "deselectAircraft()">✕</button>
 
         </div>
 
