ux: change mouse visability keybind

--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -48,7 +48,7 @@
 
         <span>  </span>
 
-        <span>Press H to toggle cursor view</span>
+        <span>Press M to toggle mouse view</span>
         <span>Press V to cycle view</span>
 
     </div>
