ui: add coloured theme

--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -44,7 +44,7 @@
         <button onclick = "centerMap()">Center Map (C)</button>
         <button onclick = "resetMap()">Reset View (R)</button>
         <button onclick = "toggleMapLabels()">Toggle Map Labels (L)</button>
-        <button onclick = "toggleApperance()">Toggle Apperance (A)</button>
+        <button onclick = "cycleApperance()">Cycle Apperance (A)</button>
 
         <span>  </span>
 
