feat: add favicons

--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -14,6 +14,15 @@
     <!-- Element styles-->
     <link rel = "stylesheet" href="Styles.css">
 
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="Assets/Favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Assets/Favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/Favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="Assets/Favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="Assets/Favicons/android-chrome-512x512.png">
+    <link rel="rel icon" href="Assets/Favicons/favicon.ico">
+    <link rel="manifest" href="Assets/Favicons/site.webmanifest">
+
 </head>
 
 <!-- HTML Structure -->
