feat: website description

--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -11,12 +11,14 @@
 
     gtag('config', 'G-BD6X6XVNFK');
     </script>
-    
+
     <!-- Page setup-->
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     
     <title>Aerostream Radar</title>
+
+    <meta name = "description" content = "Real-time, free flight tracking for aircraft in your area and around the world. Powered by ADSB.lol and Leaflet interactive maps.">
 
     <!-- Map import -->
     <link rel = "stylesheet" href = "https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
