--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -207,7 +207,8 @@
     <script src = "https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     
     <!-- JS Scripting -->
-    <script src="Scripts.js"></script>
+    <script src="Scripts/session-manager.js"></script>
+    <script src="Scripts/main.js"></script>
 
 </body>
 </html>
