--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -49,6 +49,11 @@
 
         </div>
 
+        <div style = "font-size: 10px; margin-top: 10px; opacity: 0.6;">
+            This can be disabled by pressing "T", though please be mindful of your resource usage.
+            
+        </div>
+
     </div>
 
     <div id="fullscreen-cover"></div>
