fix: apperance state changes

--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -51,7 +51,7 @@
 
         <div style = "font-size: 10px; margin-top: 10px; opacity: 0.6;">
             This can be disabled by pressing "T", though please be mindful of your resource usage.
-            
+
         </div>
 
     </div>
@@ -71,7 +71,7 @@
         <button onclick = "centerMap()">Center Map (C)</button>
         <button onclick = "resetMap()">Reset View (R)</button>
         <button onclick = "toggleMapLabels()">Toggle Map Labels (L)</button>
-        <button onclick = "cycleAppearance()">Cycle Appearance (A)</button>
+        <button onclick = "UIManager.cycleAppearance()">Cycle Appearance (A)</button>
 
         <span>  </span>
 
