refactor: seperate keyboard handles

--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -215,6 +215,7 @@
     <!-- JS Scripting -->
     <script src = "Scripts/session-manager.js"></script>
     <script src = "Scripts/ui-manager.js"></script>
+    <script src = "Scripts/keyboard-handler.js"></script>
 
     <script src = "Scripts/main.js"></script>
 
