--- a/Frontend/AerostreamRadar.html
+++ b/Frontend/AerostreamRadar.html
@@ -136,8 +136,8 @@
             </label>
         </div>
 
-        <button onclick = "setCoordinates()">Use Manual Coordinates</button>
-        <button class = "location-button" onclick = "requestLocation()"> Try Location Services Again</button>
+        <button onclick = "MapController.setCoordinates()">Use Manual Coordinates</button>
+        <button class = "location-button" onclick = "MapController.requestLocation()"> Try Location Services Again</button>
 
     </div>
 
@@ -216,6 +216,7 @@
     <script src = "Scripts/session-manager.js"></script>
     <script src = "Scripts/ui-manager.js"></script>
     <script src = "Scripts/keyboard-handler.js"></script>
+    <script src = "Scripts/map-controller.js"></script>
 
     <script src = "Scripts/main.js"></script>
 
